# Sentinel-Protocol

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/backend/: jest.config.js  package.json  railway.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: index.ts
apps/backend/src/config/: constants.ts  index.ts  networks.ts
apps/backend/src/services/: cache.ts  database.ts  index.ts  orchestrator.ts
apps/backend/src/utils/: logger.ts  retry.ts  validation.ts
apps/frontend/: index.html  package.json  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/frontend/src/contexts/: NetworkContext.tsx  ToastContext.tsx  WalletContext.tsx  index.ts
apps/frontend/src/hooks/: index.ts  useAccounts.ts  useAlerts.ts  usePortfolio.ts  usePositions.ts  usePrivacy.ts  useProtection.ts  useRates.ts  useStats.ts  useWebSocket.ts
apps/frontend/src/pages/: AccountDetail.tsx  Accounts.tsx  Alerts.tsx  Dashboard.tsx  History.tsx  OpenPosition.tsx  Portfolio.tsx  Privacy.tsx  Rates.tsx  Settings.tsx  TestPrediction.tsx
apps/frontend/src/services/: api.ts  index.ts  websocket.ts
apps/frontend/src/styles/: base.css  colors.css
apps/frontend/src/tests/: TestPrediction.tsx
arcium-mpc/: Anchor.toml  Arcium.toml  Cargo.toml  package.json
arcium-mpc/encrypted-ixs/: Cargo.toml
arcium-mpc/encrypted-ixs/src/: lib.rs
arcium-mpc/programs/sentinel-mpc/: Cargo.toml
arcium-mpc/programs/sentinel-mpc/src/: lib.rs
(+99 files in other folders)
